[package]
name = "kajet"
version = "0.2.1"
edition = "2024"
authors = ["Paweł Bielecki <bieleckipawel10@gmail.com>"]
description = "A mnimal infinite canvas drawing app"
readme = "README.md"
homepage = "https://github.com/FreePlacki/kajet"
repository = "https://github.com/FreePlacki/kajet"
license = "MIT"

[dependencies]
arboard = "3.6.0"
configparser = "3.1.0"
dirs = "6.0.0"
minifb = "0.28.0"
tiny-skia = "0.11.4"
