[package]
name = "kajet"
version = "0.3.0"
edition = "2024"
authors = ["Paweł Bielecki <bieleckipawel10@gmail.com>"]
description = "A mnimal infinite canvas drawing app"
readme = "README.md"
homepage = "https://github.com/FreePlacki/kajet"
repository = "https://github.com/FreePlacki/kajet"
license = "MIT"

[dependencies]
configparser = "3.1.0"
dirs = "6.0.0"
raylib = "5.5.1"
widok = { version = "0.1.0", path = "../widok" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6.0"
